<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="15dp"
        style="@style/Layout">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp"
            android:text="@string/who_is_your_friend"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <ImageButton
                style="@style/LayoutV3"
                android:src="@drawable/ic_baseline_person_24"
                android:background="@color/grey"
                android:contentDescription="" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
                <TextView
                    android:textColor="@color/teal_700"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_something"
                    android:autofillHints=""
                    android:inputType="textShortMessage" />
            </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/school"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_something"
                android:autofillHints=""
                android:inputType="textShortMessage" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hobby"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_something"
                android:autofillHints=""
                android:inputType="textShortMessage" />
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/teal_700"
                android:textStyle="bold"
                android:textSize="17sp"
                android:layout_marginStart="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/github"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_something"
                android:autofillHints=""
                android:inputType="textShortMessage" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
