<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Layout"
        android:id="@+id/contraintHome"
        android:orientation="horizontal">

        <TextView
            style="@style/LayoutV2"
            android:layout_margin="5dp"
            android:padding="7dp"
            android:text="@string/hello_how_are_you"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            style="@style/LayoutV2"
            android:layout_margin="5dp"
            android:background="@drawable/ic_baseline_search_24"
            android:contentDescription="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Layout"
        android:id="@+id/newFriend"
        android:layout_below="@+id/contraintHome"
        android:layout_marginTop="5dp">

        <TextView
            style="@style/Layout"
            android:padding="7dp"
            android:text="@string/new_friend"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/LayoutV2"
            android:text="@string/view_all"
            android:textColor="#01C6B3"
            android:textColorLink="#01C6B3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSiswa"
        android:layout_below="@+id/newFriend"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:listitem="">

    </androidx.recyclerview.widget.RecyclerView>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="15dp"
            android:backgroundTint="#4B5DCA"
            android:foregroundGravity="center"
            android:contentDescription="@string/tambah"
            android:src="@drawable/ic_baseline_add_24">

        </com.google.android.material.floatingactionbutton.FloatingActionButton>


</RelativeLayout>
