<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearAll"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvAllFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_your_friend"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:textStyle="bold|italic" />
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/constraintSearch"
        android:layout_below="@+id/linearAll"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="true"
            android:background="@color/grey"
            android:hint="@string/find_who"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_baseline_search_24"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvSiswa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/constraintSearch"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        tools:listitem="@layout/item_recyclerview">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>